--- a/index.delivery.html
+++ b/index.delivery.html
@@ -1,3 +1,4 @@
+<!-- CÓDIGO COMPLETO ABAIXO -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -149,6 +150,24 @@
       </select>
     </div>
     <div>
+      <label for="mesResumoEmpresas">Mês</label>
+      <select id="mesResumoEmpresas">
+        <option value="">Todos</option>
+        <option value="01">Janeiro</option>
+        <option value="02">Fevereiro</option>
+        <option value="03">Março</option>
+        <option value="04">Abril</option>
+        <option value="05">Maio</option>
+        <option value="06">Junho</option>
+        <option value="07">Julho</option>
+        <option value="08">Agosto</option>
+        <option value="09">Setembro</option>
+        <option value="10">Outubro</option>
+        <option value="11">Novembro</option>
+        <option value="12">Dezembro</option>
+      </select>
+    </div>
+    <div>
       <button onclick="atualizarResumoEmpresa()">Filtrar Resumo</button>
     </div>
   </div>
@@ -168,16 +187,13 @@ function setDefaultDates() {
   const hoje = new Date();
   const ano = hoje.getFullYear();
   const mes = hoje.getMonth();
-
   const inicio = new Date(ano, mes - 1, 1);
   const fim = new Date(ano, mes, 0);
-
   document.getElementById("dataInicio").value = inicio.toISOString().split('T')[0];
   document.getElementById("dataFim").value = fim.toISOString().split('T')[0];
-
-  // Seleciona mês anterior no select
   const mesAnterior = (inicio.getMonth() + 1).toString().padStart(2, '0');
   document.getElementById("mesResumo").value = mesAnterior;
+  document.getElementById("mesResumoEmpresas").value = mesAnterior;
 }
 
 async function carregarDados() {
@@ -275,12 +291,15 @@ function atualizarResumoEmpresa() {
   const dataFim = document.getElementById("dataFim").value;
   const empresa = document.getElementById("empresa").value;
   const plataforma = document.getElementById("plataforma").value;
+  const mesResumo = document.getElementById("mesResumoEmpresas").value;
 
   const filtrados = dados.filter(d => {
+    const mesDado = d.data.split("-")[1];
     return (!dataInicio || d.data >= dataInicio) &&
            (!dataFim || d.data <= dataFim) &&
            (empresa === "todas" || d.empresa === empresa) &&
-           (plataforma === "todas" || d.plataforma === plataforma);
+           (plataforma === "todas" || d.plataforma === plataforma) &&
+           (!mesResumo || mesResumo === mesDado);
   });
 
   const resumoPorEmpresa = {};
@@ -288,7 +307,6 @@ function atualizarResumoEmpresa() {
   filtrados.forEach(d => {
     const emp = d.empresa;
     const plat = d.plataforma;
-
     if (!resumoPorEmpresa[emp]) resumoPorEmpresa[emp] = {};
     if (!resumoPorEmpresa[emp][plat]) {
       resumoPorEmpresa[emp][plat] = { bruto: 0, liquido: 0, taxa: 0, repassado: 0 };
