--- a/index.delivery.html
+++ b/index.delivery.html
@@ -6,7 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f7f7f7; margin: 0; padding: 0; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 0;
+    }
+
     header {
       background-color: white;
       padding: 10px 20px;
@@ -14,10 +20,12 @@
       align-items: center;
       border-bottom: 1px solid #ccc;
     }
+
     header img {
       height: 50px;
       margin-right: 20px;
     }
+
     header h1 {
       margin: 0 auto;
       font-size: 1.6em;
@@ -25,7 +33,13 @@
       text-align: center;
       flex: 1;
     }
-    .container { padding: 20px; }
+
+    .container {
+      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
     .chart-box, .total-box, .resumo-box {
       background: white;
       border-radius: 10px;
@@ -33,19 +47,52 @@
       padding: 20px;
       margin-bottom: 20px;
     }
-    .chart-box canvas { max-width: 100%; height: 300px; }
-    .total-box h3, .resumo-box h3 { margin-top: 0; }
-    .total-line { display: flex; justify-content: space-between; padding: 5px 0; font-size: 1.1em; }
-    .total-line strong { font-weight: bold; }
-    .filters { display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 20px; align-items: end; }
-    .filters label { font-weight: bold; }
+
+    .chart-box canvas {
+      max-width: 100%;
+      height: 300px;
+    }
+
+    .total-box h3, .resumo-box h3 {
+      margin-top: 0;
+      font-size: 1.2em;
+      color: #2c3e50;
+    }
+
+    .total-line {
+      display: flex;
+      justify-content: space-between;
+      padding: 5px 0;
+      font-size: 1.1em;
+    }
+
+    .total-line strong {
+      font-weight: bold;
+    }
+
+    .filters {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 20px;
+      align-items: end;
+    }
+
+    .filters label {
+      font-weight: bold;
+    }
+
     .filters select, .filters input[type="month"] {
       padding: 10px;
       border-radius: 8px;
       border: 1px solid #ccc;
       width: 100%;
     }
-    .filters > div { flex: 1 1 200px; }
+
+    .filters > div {
+      flex: 1 1 200px;
+    }
+
     .filters button {
       padding: 10px 20px;
       border: none;
@@ -55,6 +102,7 @@
       font-weight: bold;
       cursor: pointer;
     }
+
     .resumo-linha {
       background: #eaffea;
       padding: 10px;
@@ -62,13 +110,30 @@
       margin-bottom: 10px;
       line-height: 1.6;
     }
-    .resumo-linha strong { display: block; font-size: 1.1em; margin-bottom: 4px; }
-    .total-box select#empresaResumo {
+
+    .resumo-linha strong {
+      display: block;
+      font-size: 1.1em;
+      margin-bottom: 4px;
+    }
+
+    .total-box select#empresaResumo,
+    .total-box select#mesResumo {
       margin-top: 5px;
       margin-left: 10px;
       padding: 5px;
       border-radius: 6px;
       border: 1px solid #ccc;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+      header img {
+        margin: 0 0 10px;
+      }
     }
   </style>
 </head>
@@ -76,7 +141,7 @@
 
 <header>
   <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-  <h1>Vendas Delivery</h1>
+  <h1>📦 Vendas Delivery</h1>
 </header>
 
 <div class="container">
