--- a/index.resumofinanceiro.html
+++ b/index.resumofinanceiro.html
@@ -13,6 +13,7 @@
       margin: 0;
       padding: 0;
     }
+
     header {
       background-color: white;
       padding: 10px 20px;
@@ -20,10 +21,12 @@
       align-items: center;
       border-bottom: 1px solid #ccc;
     }
+
     header img {
       height: 50px;
       margin-right: 20px;
     }
+
     header h1 {
       margin: 0 auto;
       font-size: 1.6em;
@@ -31,9 +34,13 @@
       text-align: center;
       flex: 1;
     }
+
     .conteudo {
       padding: 20px;
+      max-width: 1200px;
+      margin: auto;
     }
+
     .filtros {
       display: flex;
       flex-wrap: wrap;
@@ -41,9 +48,11 @@
       margin-bottom: 20px;
       align-items: end;
     }
+
     .filtros label {
       font-weight: bold;
     }
+
     .filtros input,
     .filtros select {
       padding: 10px;
@@ -51,9 +60,11 @@
       border: 1px solid #ccc;
       width: 100%;
     }
+
     .filtros > div {
       flex: 1 1 200px;
     }
+
     .filtros button {
       padding: 10px 20px;
       border: none;
@@ -63,34 +74,42 @@
       font-weight: bold;
       cursor: pointer;
     }
+
     .empresa-box {
-      background: #eaffea;
+      background: white;
       border-radius: 10px;
       padding: 15px;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
     }
+
     .empresa-box h2 {
       margin: 0 0 10px;
-      font-size: 1.1em;
+      font-size: 1.2em;
+      color: #2c3e50;
     }
+
     .empresa-box ul {
       list-style: none;
       padding-left: 0;
       margin: 0;
       font-size: 0.95em;
     }
+
     .empresa-box li {
       margin-bottom: 4px;
     }
+
     .grafico-desktop {
       display: none;
     }
+
     @media (min-width: 768px) {
       .grafico-desktop {
         display: block;
         margin-top: 15px;
       }
+
       canvas {
         max-width: 100%;
         margin: 0 auto;
@@ -102,7 +121,7 @@
 
 <header>
   <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-  <h1>Resumo de Entradas</h1>
+  <h1>📥 Resumo de Entradas</h1>
 </header>
 
 <div class="conteudo">
@@ -131,8 +150,6 @@
       <button id="enviarWhatsapp">📲 Enviar pelo WhatsApp</button>
     </div>
   </div>
-  <div id="painel"></div>
-</div>
 
   <div id="painel"></div>
 </div>
