--- a/index.resumofinanceiro.html
+++ b/index.resumofinanceiro.html
@@ -115,6 +115,17 @@
         margin: 0 auto;
       }
     }
+
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      header img {
+        margin: 0 0 10px;
+      }
+    }
   </style>
 </head>
 <body>
