--- a/index.html
+++ b/index.html
@@ -151,32 +151,33 @@
   </header>
 
   <!-- Cards -->
-  <div class="container">
-    <a class="card" href="index.resumofinanceiro.html" target="_blank">
-      <div class="icon">📈</div>
-      <h2>Resumo Financeiro</h2>
-    </a>
+  <!-- Cards -->
+<div class="container">
+  <a class="card" href="index.resumofinanceiro.html">
+    <div class="icon">📈</div>
+    <h2>Resumo Financeiro</h2>
+  </a>
 
-    <a class="card" href="index.cancelamentos.html" target="_blank">
-      <div class="icon">❌</div>
-      <h2>Cancelamentos</h2>
-    </a>
+  <a class="card" href="index.cancelamentos.html">
+    <div class="icon">❌</div>
+    <h2>Cancelamentos</h2>
+  </a>
 
-    <a class="card" href="index.delivery.html" target="_blank">
-      <div class="icon">🚚</div>
-      <h2>Vendas Delivery</h2>
-    </a>
+  <a class="card" href="index.delivery.html">
+    <div class="icon">🚚</div>
+    <h2>Vendas Delivery</h2>
+  </a>
 
-    <a class="card" href="index.meta.html" target="_blank">
-      <div class="icon">📊</div>
-      <h2>Meta de Faturamento</h2>
-    </a>
+  <a class="card" href="index.meta.html">
+    <div class="icon">📊</div>
+    <h2>Meta de Faturamento</h2>
+  </a>
 
-    <a class="card" href="index.conciliacao.html" target="_blank">
-      <div class="icon">💳</div>
-      <h2>Conciliações</h2>
-    </a>
-  </div>
+  <a class="card" href="index.conciliacao.html">
+    <div class="icon">💳</div>
+    <h2>Conciliações</h2>
+  </a>
+</div>
 
   <!-- Script splash -->
   <script>
