--- a/index.conciliacao.html
+++ b/index.conciliacao.html
@@ -102,7 +102,7 @@
 </div>
 
 <script>
-const URL_SCRIPT = "COLE_AQUI_A_URL_DO_SEU_WEBAPP"; // Substitua com sua URL do Google Apps Script
+const URL_SCRIPT = "https://script.google.com/macros/s/AKfycbyexsTjD46MAUBO845LIJE3m6wF3EZ2ktVjdZfy3xLRKEsDI3hAXtddSPHkP2U0iJC2nA/exec"; // Substitua com sua URL do Google Apps Script
 let dados = [];
 
 async function carregarDados() {
